--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
+nom = "8.0.0"
+nom-leb128 = "0.2.0"
+num-derive = "0.4.2"
+num-traits = "0.2.19"
+
+[dev-dependencies]
+pretty_assertions = "1.4.1"
+wat = "1.229.0"
